[package]
name = "relativedelta"
version = "0.2.2"
readme = "README.md"
description = """
Rust implementation of relativedelta known from Python's dateutil library.
An extension to Duration in the chrono library to deal with relative dates.
"""
keywords = ["date", "time", "relative", "deltatime", "calendar", "chrono"]
authors = ["Tim Gorm Kaas-Rasmussen Olsen <timgormkaas@gmail.com>"]
edition = "2018"
license = "MPL-2.0+"
homepage = "https://github.com/timkaas/relativedelta/"
repository = "https://github.com/timkaas/relativedelta/"

[lib]
name = "relativedelta"
path = "src/lib.rs"

[features]
serde1 = ["serde"]

[dependencies]
chrono = { version = "^0.4"}
impl_ops = "^0.1"
num-integer = "^0.1"
serde = {version = "1.0", optional = true, features = ["derive"]}
