[package]
name = "relativedelta"
version = "0.0.0-replace-me"
readme = "README.md"
description = "Complex date arithmetic: add/subtract months and years without errors, target weekdays, lock dates. Better than Duration for semantic calendar operations."
keywords = ["datetime", "relative", "deltatime", "calendar", "date-arithmetic"]
edition = "2024"
rust-version = "1.88.0"
license = "MPL-2.0+"
homepage = "https://github.com/timkaas/relativedelta/"
repository = "https://github.com/timkaas/relativedelta/"
documentation = "https://docs.rs/relativedelta"

[lib]
name = "relativedelta"
path = "src/lib.rs"

[features]
default = []
std = ["chrono?/std", "time?/std"]
time = ["dep:time", "dep:time-core"]
chrono = ["dep:chrono"]
serde = ["dep:serde", "chrono?/serde", "time?/serde"]
schemars = ["dep:schemars"]

[dependencies]
chrono = { version = "0.4", optional = true }
time = { version = "0.3.47", optional = true }
impl_ops = "0.1"
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1.0", optional = true, features = ["derive"] }
paste = "1.0"
thiserror = "2.0"
time-core = { version = "0.1", optional = true }
schemars = { version = "1.2.1", optional = true }

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
similar-asserts = "2.0"

[build-dependencies]
regex = "1.12.3"

[package.metadata.docs.rs]
all-features = true
